alignment correction

--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -188,14 +188,6 @@ body {
     margin-top: 20px;
 }
 
-/* .card-image-long {
-    width: 100%;
-    height: 100%; Adjust height as needed
-    object-fit: cover; Ensures the image fits within the container
-    border-radius: 4px;
-    margin-top: 20px;
-} */
-
 .attendance-chart {
     background-color: #f9f9f9;
     border-radius: 8px;
@@ -210,11 +202,6 @@ body {
     margin-bottom: 10px;
 }
 
-canvas {
-    width: 100%;
-    height: 400px;
-}
-
 .month {
     position: absolute;
     top: 20px;
@@ -222,18 +209,6 @@ canvas {
     font-size: 14px;
     color: gray;
 }
-
-/* .footer {
-        margin-bottom: 50px;
-        margin-left: 63%;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 30%;
-        display: flex;
-        justify-content: space-around;
-        padding: 10px 0;
-} */
 
 .nav-button {
     border-radius: 5px;
